Added dummy code for Face detection

--- a/Session-3/Assignment-3/src/index.html
+++ b/Session-3/Assignment-3/src/index.html
@@ -20,6 +20,10 @@
 			<div class="large-8 cell">
 				<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://41qjwezhob.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="button" value="Classify Image - MobileNet">
 			</div>
+			</br>
+			<div class="large-8 cell">
+				<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://0erzz2qrpi.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="button" value="Face Detection">
+			</div>
 			<p id="result"></p>
 			</div>
 		</div>
