Added code to render image from a response

--- a/Session-3/Assignment-3/src/index.html
+++ b/Session-3/Assignment-3/src/index.html
@@ -26,6 +26,9 @@
 			</div>
 			<p id="result"></p>
 			</div>
+			<div>
+				<img id="ItemPreview" src="">
+			</div>
 		</div>
 	</body>
 	<script src="js/jquery-3.3.1.min.js"></script>
