--- a/Session-3/Assignment-3/src/index.html
+++ b/Session-3/Assignment-3/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title>EVA-4-P2</title>
+		<title>EVA-4-P2-Assignment-3</title>
 	</head>
 	<body>
 		<div class="grid-x grid-margin-x" style="margin-top:2%;">
