Added Bootstrap to UI

--- a/Session-3/Assignment-3/src/index.html
+++ b/Session-3/Assignment-3/src/index.html
@@ -5,32 +5,39 @@
 		<title>EVA-4-P2-Assignment-3</title>
 	</head>
 	<body>
-		<div class="grid-x grid-margin-x" style="margin-top:2%;">
-			<div class="large-12 cell">
-				<h4 id='imageClassifiers'>Image Classifiers</h4>
-			</div>
-			<div class="large-4 cell">
-				<label for="resnet34FileUpload">Please choose image file you want to classify.</label>
-				<input type="file" id="resnet34FileUpload">
-			</div>
-			<div class="large-8 cell">
-				<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://k4n27qf9bc.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="button" value="Classify Image - Resnet34">
-			</div>
-			</br>
-			<div class="large-8 cell">
-				<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://41qjwezhob.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="button" value="Classify Image - MobileNet">
-			</div>
-			</br>
-			<div class="large-8 cell">
-				<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://0erzz2qrpi.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="button" value="Face Detection">
-			</div>
-			<p id="result"></p>
+		<div class="container">
+			<div class="grid-x grid-margin-x" style="margin-top:2%;">
+				<h1 id='imageClassifiers'>Image Classifiers & Face Alignment</h4>
+				<div class="large-4 cell">
+					<label for="resnet34FileUpload">Please choose image file you want to classify.</label>
+					<input type="file" id="resnet34FileUpload" onchange="readURL(this);" class="btn btn-primary">
+					<img id="uploadedImage" src="" >
+				</div>
+				</br>
+				</br>
+				<div class="large-8 cell">
+					<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://k4n27qf9bc.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="btn btn-primary btn-block" value="Classify Image - Resnet34">
+				</div>
+				</br>
+				<div class="large-8 cell">
+					<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://41qjwezhob.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="btn btn-primary btn-block" value="Classify Image - MobileNet">
+				</div>
+				</br>
+				<div class="large-8 cell">
+					<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://0erzz2qrpi.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="btn btn-primary btn-block" value="Face Alignment">
+				</div>
+				<div>
+					<h4>Result:</h4>
+					<p id="result"></p>
+				</div>				
 			</div>
 			<div>
 				<img id="ItemPreview" src="">
 			</div>
 		</div>
 	</body>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/upload.js"></script>
 </html>
