Update ReadMe.md, Manoj_Bajpayee_0002.jpg, and 5 more files...

--- a/Session-5/Assignment-5/src/index.html
+++ b/Session-5/Assignment-5/src/index.html
@@ -30,6 +30,11 @@
                 <div class="large-8 cell">
 					<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://d65u22aqf8.execute-api.ap-south-1.amazonaws.com/dev/classify')" class="btn btn-primary btn-block" value="Face Recognition">
 				</div>
+				</br>
+				<div class="large-8 cell">
+					<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://6lm64acf6k.execute-api.ap-south-1.amazonaws.com/dev/hpe')" class="btn btn-primary btn-block" value="Human Pose Estimation">
+				</div>
+				</br>
 				<div>
 					<h4>Result:</h4>
 					<p id="result"></p>
