Update ReadMe.md, hpe-result.png, and 2 more files...

--- a/Session-5/Assignment-5/src/index.html
+++ b/Session-5/Assignment-5/src/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div class="container">
 			<div class="grid-x grid-margin-x" style="margin-top:2%;">
-				<h1 id='imageClassifiers'>Image Classifiers, Face Alignment and Face Recognition</h4>
+				<h1 id='imageClassifiers'>Computer Vision</h4>
 				<div class="large-4 cell">
 					<label for="resnet34FileUpload">Please choose image file you want to classify.</label>
 					<input type="file" id="resnet34FileUpload" onchange="readURL(this);" class="btn btn-primary">
