Update index.html and upload.js

--- a/Session-6/Assignment-6/src/index.html
+++ b/Session-6/Assignment-6/src/index.html
@@ -36,9 +36,12 @@
 				</div>
                 </br>
                 <div class="large-8 cell">
-					<input type="button" id="btnResNetUpload" onclick="gan('https://pjoo5furs2.execute-api.ap-south-1.amazonaws.com/dev/hpe')" class="btn btn-primary btn-block" value="DCGAN on CAR">
+					<input type="button" id="btnResNetUpload" onclick="gan('https://0imo4n8ho5.execute-api.ap-south-1.amazonaws.com/dev/gan')" class="btn btn-primary btn-block" value="DCGAN on CAR">
 				</div>
                 </br>
+				<div class="large-8 cell">
+					<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://ri0c32nzv3.execute-api.ap-south-1.amazonaws.com/dev/hpe')" class="btn btn-primary btn-block" value="Variational Auto Encoder">
+				</div>
 				<div>
 					<h4>Result:</h4>
 					<p id="result"></p>
