Update index.html, handler.py, and serverless.yml

--- a/Session-6/Assignment-6/src/index.html
+++ b/Session-6/Assignment-6/src/index.html
@@ -36,7 +36,7 @@
 				</div>
                 </br>
                 <div class="large-8 cell">
-					<input type="button" id="btnResNetUpload" onclick="gan('https://0imo4n8ho5.execute-api.ap-south-1.amazonaws.com/dev/gan')" class="btn btn-primary btn-block" value="DCGAN on CAR">
+					<input type="button" id="btnResNetUpload" onclick="gan('https://mnehh7bgp4.execute-api.ap-south-1.amazonaws.com/dev/gan')" class="btn btn-primary btn-block" value="DCGAN on CAR">
 				</div>
                 </br>
 				<div class="large-8 cell">
