Update index.html, upload.js, and 3 more files...

--- a/Session-7/Assignment-7/src/index.html
+++ b/Session-7/Assignment-7/src/index.html
@@ -40,7 +40,7 @@
 				</div>
                 </br>
 				<div class="large-8 cell">
-					<input type="button" id="btnResNetUpload" onclick="uploadAndClassifyImage('https://ri0c32nzv3.execute-api.ap-south-1.amazonaws.com/dev/hpe')" class="btn btn-primary btn-block" value="Variational Auto Encoder">
+					<input type="button" id="btnResNetUpload" onclick="vae('https://61eji19tl2.execute-api.ap-south-1.amazonaws.com/dev/vae')" class="btn btn-primary btn-block" value="Variational Auto Encoder">
 				</div>
 				<div>
 					<h4>Result:</h4>
