Updated deployed files

--- a/Session-8/Assignment-8/src/index.html
+++ b/Session-8/Assignment-8/src/index.html
@@ -40,7 +40,12 @@
 				</div>
                 </br>
 				<div class="large-8 cell">
-					<input type="button" id="btnResNetUpload" onclick="vae('https://61eji19tl2.execute-api.ap-south-1.amazonaws.com/dev/vae')" class="btn btn-primary btn-block" value="Variational Auto Encoder">
+					<input type="button" id="btnResNetUpload" onclick="gan('https://sfvaag76j3.execute-api.ap-south-1.amazonaws.com/dev/gan')" class="btn btn-primary btn-block" value="Variational Auto Encoder">
+				</div>
+				<div>
+                </br>
+				<div class="large-8 cell">
+					<input type="button" id="btnResNetUpload" onclick="srgan('https://7vbcaffinh.execute-api.ap-south-1.amazonaws.com/dev/srgan')" class="btn btn-primary btn-block" value="Super Resolution GAN">
 				</div>
 				<div>
 					<h4>Result:</h4>
