Assignment-9 : Added Sentiment analysis to html page

--- a/Session-9/Assignment-9/src/index.html
+++ b/Session-9/Assignment-9/src/index.html
@@ -63,6 +63,12 @@
 					</br>
 					<input type="button" id="btnNeuralStyleTransfer" onclick="nst('https://gpn92bwxt9.execute-api.ap-south-1.amazonaws.com/dev/nst')" class="btn btn-primary btn-block" value="Neural Style Transfer">
 				</div>
+				</br>
+				<div class="large-8 cell">
+					<label>Enter Sentiment: </label>
+					<input type="text" id="txtSentiment">
+					<input type="button" id="btnSentiment" onclick="sentiment('https://gpn92bwxt9.execute-api.ap-south-1.amazonaws.com/dev/nst')" class="btn btn-primary btn-block" value="Sentiment Analysis">
+				</div>
 				<div>
 					<h4>Result:</h4>
 					<p id="result"></p>
