Updated handler and serverless files

--- a/Session-9/Assignment-9/src/index.html
+++ b/Session-9/Assignment-9/src/index.html
@@ -67,7 +67,7 @@
 				<div class="large-8 cell">
 					<label>Enter Sentiment: </label>
 					<input type="text" id="txtSentiment">
-					<input type="button" id="btnSentiment" onclick="sentiment('https://gpn92bwxt9.execute-api.ap-south-1.amazonaws.com/dev/nst')" class="btn btn-primary btn-block" value="Sentiment Analysis">
+					<input type="button" id="btnSentiment" onclick="sentiment('https://l75gx6g2d9.execute-api.ap-south-1.amazonaws.com/dev/predict')" class="btn btn-primary btn-block" value="Sentiment Analysis">
 				</div>
 				<div>
 					<h4>Result:</h4>
