--- a/Session-9/Assignment-9/src/index.html
+++ b/Session-9/Assignment-9/src/index.html
@@ -71,7 +71,7 @@
 				</div>
 				<div>
 					<h4>Result:</h4>
-					<p id="result"></p>
+					<h1 id="result"></h1>
 				</div>				
 			</div>
 			<div>
