Update index.html and upload.js

--- a/Session-11/Assignment-11/src/index.html
+++ b/Session-11/Assignment-11/src/index.html
@@ -73,7 +73,7 @@
 				<div class="large-8 cell">
 					<label>Enter Sentence in German: </label>
 					<input type="text" id="txtTranslate">
-					<input type="button" id="btnTranslate" onclick="translate('https://bwzba5uckh.execute-api.ap-south-1.amazonaws.com/dev/nlp')" class="btn btn-primary btn-block" value="Translation">
+					<input type="button" id="btnTranslate" onclick="translation('https://75t4f99u03.execute-api.ap-south-1.amazonaws.com/dev/translate')" class="btn btn-primary btn-block" value="Translation">
 				</div>
 				<div>
 					<h4>Result:</h4>
