ng add @ng-toolkit/universal@7.1.2

--- a/Capstone/Project/src/frontend/src1/ai-endeavour/src/index.html
+++ b/Capstone/Project/src/frontend/src1/ai-endeavour/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>AiEndeavour</title>
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+   <head>
+      <meta charset="utf-8">
+      <title>AI-Endeavour</title>
+      <base href="/">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="icon" type="image/x-icon" href="favicon.ico">
+   </head>
+   <body>
+      <app-root class="content"></app-root>
+      <footer>Made with <span style="color: #e25555;">&#9829;</span> by AI-Endeavour </footer>
+   </body>
 </html>
