--- a/Capstone/Project/src/frontend/src/ai-endeavour/src/index.html
+++ b/Capstone/Project/src/frontend/src/ai-endeavour/src/index.html
@@ -7,6 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+  main{
+  margin-top:7rem !important;
+}
+
+  </style>
 </head>
 <body>
   <app-root></app-root>
